# dwata

./: .gitignore  README.md  gen_ts_api_types.sh  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: .env.copy  .gitignore  Pipfile  README.md  migrations.py  pyproject.toml  requirements.txt  server.py  settings-template.toml  workers.py
backend/apps/attributes/: attributes.py  models.py
backend/apps/auth/: handlers.py  user.py
backend/apps/data_sources/: models.py
backend/apps/note/: models.py  setup.py
backend/apps/permissions/: models.py
backend/apps/policies/: models.py
backend/apps/record_pin/: models.py  setup.py
backend/apps/saved_query/: models.py  setup.py
backend/apps/saved_query_specification/: models.py  setup.py
backend/apps/schema_meta/: models.py
backend/apps/settings/: handlers.py  hierarchy.py  models.py
backend/apps/tables/: models.py  workers.py
backend/apps/users/: models.py
backend/database/: connect.py  dwata_meta.py  migrations.py  query_builder.py  schema.py  select.py
backend/dwata_meta_migrations/: migrate.cfg
backend/dwata_meta_migrations/versions/: 002_Add_tables_migration.py
backend/endpoints/: api.py  app.py  capability.py  data.py  integration.py  item.py  schema.py  service.py  source.py  worker.py
backend/exceptions/: authentication.py  base.py  database.py  setup.py
backend/fake_genertor/: generate.py
backend/integrations/: __init__.py  stripe.py
backend/middlewares/: app.py  setup.py
backend/rules/: constants.py
backend/services/: __init__.py  mailchimp.py  stripe.py
backend/tests/: test_database_utils.py
backend/utils/: app.py  auth_backend.py  cache.py  config.py  database.py  env_settings.py  exceptions.py  http.py  query_builder.py  response.py  routes.py  schema.py  settings.py  source.py
backend/workers/database/: refresh_tables.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bindings/: AIIntegration.ts  AIModel.ts  AIProvider.ts  Chat.ts  ChatToolResponse.ts  Configuration.ts  Content.ts  ContentSpec.ts  DatabaseSource.ts  DatabaseType.ts  DirectorySource.ts  DirectorySourceCreateUpdate.ts  File.ts  HeterogeneousContentArray.ts  HomogeneousContentArray.ts  InsertUpdateResponse.ts  ModuleDataCreateUpdate.ts  ModuleDataReadList.ts  Role.ts  Step.ts  UserAccountCreateUpdate.ts
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240306140747_initial.sql  20240516081953_init.sql  20240516082109_directory.sql  20240516082109_directory_source.sql  20240518082109_database_source.sql  20240528025219_ai_integration_model.sql  20240528025219_ai_provider_model.sql  20240601025237_chat.sql  20240603032137_workflow.sql  20240621111433_chat.sql  20240621111809_ai_integration.sql  20240701051923_chat_compare_ai_models.sql  20240708145550_oauth2.sql  20240712062636_email_account.sql  20240718163204_email_and_bucket.sql  20240725082015_process_log.sql  20240817030241_alter_mailbox.sql  20240817032018_contact.sql  20240817032024_email.sql  20240818153019_alter_email.sql  20240820050352_alter_email_unique_uid_mailbox_id.sql
src-tauri/migrations_temp/: 20240528025219_ai_provider_model.sql  20240528025237_chat.sql
src-tauri/openai/: .gitignore  Cargo.toml  README.md
src-tauri/openai/.openapi-generator/: FILES
src-tauri/openai/src/: lib.rs
src-tauri/openai/src/types/: chat_completion_message_tool_call.rs  embedding.rs  (+15 more)
src-tauri/src/: error.rs  main.rs  store.rs
src-tauri/src/ai/: api_types.rs  commands.rs  configuration.rs  crud.rs  helpers.rs  mod.rs  models.rs  tool_use.rs
src-tauri/src/ai_integration/: api.rs  commands.rs  configuration.rs  crud.rs  mod.rs  models.rs
src-tauri/src/api_types/: AIIntegrationCreateUpdate.ts  AIIntegrationFilters.ts  AIModelDeveloper.ts  AIModelFeatures.ts  ChatCreateUpdate.ts  ChatFilters.ts  Code.ts  Configuration.ts  ContentType.ts  DatabaseSourceCreateUpdate.ts  FormField.ts  FormFieldData.ts  Module.ts  ModuleDataRead.ts  ModuleFilters.ts  Objective.ts  TextType.ts  UserAccount.ts  Workflow.ts
src-tauri/src/chat/: api.rs  api_types.rs  commands.rs  configuration.rs  crud.rs  helpers.rs  mod.rs
src-tauri/src/contacts/: mod.rs
src-tauri/src/content/: containers.rs  content.rs  content_types.rs  form.rs  mod.rs
src-tauri/src/data_sources/: api_types.rs  commands.rs  database.rs  directory.rs  folder.rs  mod.rs
src-tauri/src/database_source/: api.rs  api_types.rs  configuration.rs  crud.rs  database.rs  helpers.rs  mod.rs
src-tauri/src/directory/: commands.rs  configuration.rs  crud.rs  file_contents.rs  helpers.rs  mod.rs  models.rs
src-tauri/src/directory_source/: api.rs  commands.rs  configuration.rs  crud.rs  file_contents.rs  mod.rs
src-tauri/src/email/: commands.rs  crud.rs  helpers.rs  mod.rs  tests.rs
src-tauri/src/email_account/: api.rs  app_state.rs  commands.rs  crud.rs  helpers.rs  mod.rs  providers.rs  typesense.rs
src-tauri/src/embedding/: commands.rs  fastembed.rs  helpers.rs  mod.rs  rust_bert.rs  storage.rs
src-tauri/src/folder/: commands.rs  mod.rs
src-tauri/src/labels/: mod.rs
src-tauri/src/llm_manager/: mod.rs
src-tauri/src/oauth2/: api.rs  commands.rs  configuration.rs  crud.rs  helpers.rs  mod.rs
src-tauri/src/query_result/: api_types.rs  commands.rs  mod.rs
src-tauri/src/relational_database/: api_types.rs  commands.rs  crud.rs  mod.rs
src-tauri/src/saved_query/: mod.rs
src-tauri/src/schema/: api_types.rs  commands.rs  helpers.rs  metadata.rs  mod.rs
src-tauri/src/store/: database.rs  mod.rs
src-tauri/src/text_generation/: commands.rs  helpers.rs  mod.rs
src-tauri/src/user_account/: api.rs  api_types.rs  commands.rs  configuration.rs  crud.rs  mod.rs  models.rs
src-tauri/src/workflow/: actionable.rs  mod.rs
src-tauri/src/workspace/: api.rs  api_types.rs  app_state.rs  commands.rs  config.rs  configuration.rs  crud.rs  db.rs  helpers.rs  mod.rs  process_log.rs  typesense.rs
src-tauri/test_fixtures/: fastapi_tutorial.md
ui-demo/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui-demo/src-tauri/src/: error.rs  main.rs
(+651 files in other folders)
