[workspace]
members = ["openai"]

[package]
name = "dwata"
version = "0.0.6"
description = "An AI studio whee you connect your data sources and have convesations with AI"
authors = ["Sumit Datta <sumitd@dwata.com>"]
license = "Apache-2.0 license"
repository = "https://github.com/brainless/dwata"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
include_dir = "0.7.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "migrate", "chrono"] }
ron = "0.8.1"
url = { version = "2.5.0", features = ["serde"] }
ts-rs = { version = "7.1.1", features = ["chrono"] }
sqlx-postgres = "0.7.3"
chrono = { version = "0.4.34", features = ["serde"] }
sqlparser = "0.43.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
derive_builder = "0.20.0"
ulid = { version = "1.1.2", features = ["serde"] }
log = "0.4.21"
openai = { path = "openai" }
comrak = "0.23.0"
sqlite-vss = { version = "0.1.2", features = ["download-libs"] }
glob = "0.3.1"
qdrant-client = "1.9.0"
uuid = "1.8.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
