[workspace]
members = ["openai"]

[package]
name = "dwata"
version = "0.2.0"
description = "AI assisted app for our private data"
authors = ["Sumit Datta <sumitdatta@gmail.com>"]
license = "Apache-2.0 license"
repository = "https://github.com/brainless/dwata"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
ts-rs = { version = "8.1.0", features = [
    "chrono",
    "chrono-impl",
    "url",
    "url-impl",
] }
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
comrak = "0.23.0"
glob = "0.3.1"
uuid = "1.8.0"
env_logger = "0.11.3"
strum = { version = "0.26.2", features = ["derive"] }
oauth2 = "4.4.2"
imap = "2.4.1"
native-tls = "0.2.12"
mail-parser = "0.9.3"
slug = "0.1.5"
tantivy = "0.22.0"
tauri-plugin-shell = "2.0.0-rc.2"
regex = "1.10.6"
pixlieai = { path = "../../PixlieAI/pixlieai_rs" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
