[package]
name = "openai"
version = "2.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "The OpenAI REST API. Please see https://platform.openai.com/docs/api-reference for more details."
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
