[package]
name = "ui-demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
include_dir = "0.7.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite"] }
ron = "0.8.1"
url = { version = "2.5.0", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
